--- a/docs/pages/database-access/guides/sql-server-ad-pkinit.mdx
+++ b/docs/pages/database-access/guides/sql-server-ad-pkinit.mdx
@@ -67,13 +67,13 @@ You will need to repeat these steps if you rotate Teleport's database certificat
 1. Get the Teleport database CA certificate by running:
 
    ```code
-   $ tctl auth export --type=db-der > db-ca.cer
+   $ tctl auth export --type=db-client-der > db-ca.cer
    ```
 
 1. Get the Teleport database CRL by running:
 
    ```code
-   $ tctl auth crl --type=db > db-ca.crl
+   $ tctl auth crl --type=db_client > db-ca.crl
    ```
 
 1. Transfer the `db-ca.cer` and `db-ca.crl` files to a Windows machine where you can manage your group policy.
