--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -48,9 +48,8 @@ We will run the following Teleport services:
 ### Prerequisites
 
 You will need the following to deploy a demo Teleport cluster. If your
-environment doesn't meet the prerequisites above, you can get started with
-Teleport by signing up for a [free trial of Teleport
-Team](https://goteleport.com/signup/).
+environment doesn't meet the prerequisites, you can get started with Teleport by
+signing up for a [free trial of Teleport Team](https://goteleport.com/signup/).
 
 If you want to get a feel for Teleport commands and capabilities without setting
 up any infrastructure, take a look at the browser-based [Teleport
@@ -200,15 +199,14 @@ With Teleport, you can protect all of the resources in your infrastructure
 behind a single identity-aware access proxy, including servers, databases,
 applications, Kubernetes clusters, Windows desktops, and cloud provider APIs.
 
-To enroll a resource with Teleport, visit the Web UI and click the name of a
-resource on the sidebar, e.g., **Servers**, **Applications**, and
-**Kubernetes**. The Web UI will show you the steps you can take to enroll that
+To enroll a resource with Teleport, visit the Web UI and click **Enroll New
+Resource**. The Web UI will show you the steps you can take to enroll your new
 resource.
 
 ![Adding resources](../img/add-resources.png)
 
-In the **Servers** tab, you can see that you have already enrolled your Linux
-server. 
+On the home page of the Web UI, you can see that you have already enrolled your
+Linux server. 
 
 ### Next step: deploy agents
 
