Apply suggestions from code review
Co-authored-by: Roman Tkachenko <roman@goteleport.com>

--- a/docs/pages/includes/diagnostics/kubernetes-operator-troubleshooting.mdx
+++ b/docs/pages/includes/diagnostics/kubernetes-operator-troubleshooting.mdx
@@ -76,7 +76,7 @@ unintentional access.
 
 There might be some reasons causing Teleport to refuse a resource deletion, the
 most frequent one is if another resource depends on it. For example: you cannot
-delete a role if is still assigned to a user.
+delete a role if it is still assigned to a user.
 
 If this happens, the operator will report the error sent by Teleport in its log.
 
