Adjust existing resource sections to changes brought by Unified Resources

--- a/docs/pages/connect-your-client/teleport-connect.mdx
+++ b/docs/pages/connect-your-client/teleport-connect.mdx
@@ -68,7 +68,7 @@ which cluster the current tab is bound to, and the **Share Feedback** button in 
 
 1. Open a tab with cluster resources by clicking on the plus symbol at the right end of the tab bar.
    You can also press <span style="white-space: nowrap;">`Ctrl/Cmd + T`</span> to achieve the same result.
-1. Look for the SSH server you want to connect to and click the Connect button to the right.
+1. Look for the SSH server you want to connect to and click the Connect button.
 1. Select or enter the SSH user you wish to log in as and press `Enter`.
 
 A new tab will open with a shell session on the chosen server.
@@ -93,8 +93,7 @@ reflected in both the tab title and the status bar.
 
 1. Open a tab with cluster resources by clicking on the plus symbol at the right end of the tab bar.
    You can also press <span style="white-space: nowrap;">`Ctrl/Cmd + T`</span> to achieve the same result.
-1. Select the Kubes section.
-1. Look for the cluster you wish to connect to and click the Connect button to the right.
+1. Look for the cluster you wish to connect to and click the Connect button.
 
 Alternatively, you can look for the cluster in the search bar and press `Enter`
 to connect to it.
@@ -115,8 +114,7 @@ Teleport Connect is closed.
 
 1. Open a tab with cluster resources by clicking on the plus symbol at the end of the tab bar. You
   can also press <span style="white-space: nowrap;">`Ctrl/Cmd + T`</span> to achieve the same result.
-1. Select the Databases section.
-1. Look for the database server you wish to connect to and click the Connect button to the right.
+1. Look for the database server you wish to connect to and click the Connect button.
 1. Select or enter the database user you wish to use and press `Enter`.
 
 A new tab will open with a new connection established between your device and the database server.
