--- a/docs/pages/connect-your-client/teleport-connect.mdx
+++ b/docs/pages/connect-your-client/teleport-connect.mdx
@@ -3,8 +3,8 @@ title: Using Teleport Connect
 description: Using Teleport Connect
 ---
 
-Teleport Connect provides easy and secure access to SSH servers, databases, and Kubernetes clusters,
-with support for other resources coming in the future.
+Teleport Connect provides easy and secure access to SSH servers, databases, applications, and
+Kubernetes clusters.
 
 ![resources tab in Teleport Connect](../../img/use-teleport/connect-cluster@2x.png)
 
@@ -135,6 +135,42 @@ Connect with GUI section.
 The database connection tab shows the command that can be used to connect to the database. You can
 modify the database name of the connection and then click the Run button to open a new terminal tab
 with that command executed.
+
+## Connecting to an application
+
+Teleport Connect supports launching HTTP applications in the browser, as well as creating
+authenticated tunnels for HTTP and TCP applications. Access to AWS or SAML applications is currently
+not supported – please use tsh or the Web UI instead.
+
+### Launching an application in the browser
+
+1. Open a tab with cluster resources by clicking on the plus symbol at the end of the tab bar. You
+  can also press <span style="white-space: nowrap;">`Ctrl/Cmd + T`</span> to achieve the same result.
+1. Look for the application you wish to open and click the Launch button.
+
+Alternatively, you can look for the application in the search bar and press `Enter` to launch it in
+the browser.
+
+### Creating an authenticated tunnel
+
+1. Open a tab with cluster resources by clicking on the plus symbol at the end of the tab bar. You
+  can also press <span style="white-space: nowrap;">`Ctrl/Cmd + T`</span> to achieve the same result.
+1. Look for the application you wish to connect to.
+  - For TCP applications, click the Connect button.
+  - For HTTP applications, click the chevron next to the Launch button and select Set up connection.
+
+Alternatively, you can look for a TCP application in the search bar and press `Enter` to launch it
+in the browser.
+
+A new tab will open with a new connection established between your device and the application.
+
+This connection will remain active until you click the Close Connection button or close Teleport
+Connect. The port number will persist between app restarts—you can set up your favorite client
+without worrying about the port suddenly changing.
+
+The application connection tab shows an example command that can be used to query the application.
+Requests sent under the displayed address will be proxied through an authenticated tunnel to the
+application.
 
 ## Connecting to multiple clusters
 
