Apply suggestions from code review
Co-authored-by: Paul Gottschling <paul.gottschling@goteleport.com>
Co-authored-by: Roman Tkachenko <roman@goteleport.com>

--- a/docs/pages/management/dynamic-resources.mdx
+++ b/docs/pages/management/dynamic-resources.mdx
@@ -59,9 +59,9 @@ to manipulate cluster resources stored on the Auth Service backend. The design
 of Teleport's configuration interface makes it well suited for
 infrastructure-as-code and GitOps approaches.
 
-You can get started with `tctl`, the Terraform Provider or the Kubernetes
+You can get started with `tctl`, the Terraform Provider, and the Kubernetes
 Operator by following
-the ["Managing users and roles with IaC" guide](./dynamic-resources/user-and-role.mdx)
+the ["Managing Users and Roles with IaC" guide](./dynamic-resources/user-and-role.mdx)
 
 For more information on Teleport roles, including the `internal.logins`
 trait we use in these example roles, see the [Teleport Access
