--- a/docs/pages/reference/user-types.mdx
+++ b/docs/pages/reference/user-types.mdx
@@ -40,7 +40,7 @@ can still join even if local auth is disabled.
 The [Machine ID introduction](../machine-id/introduction.mdx).
 </Admonition>
 
-## Remote users (Single Sign On)
+## SSO users
 
 Those users are imported in Teleport from an external identity provider.
 Teleport contains a user resource representing those users, but it's only a
@@ -66,7 +66,7 @@ and automatically expires after a few days. Those users cannot be edited via
 The [SSO setup guides](../access-controls/sso.mdx).
 </Admonition>
 
-### Sync-ed users
+### Synced users
 
 Since version 15, Teleport supports fetching users from external identity
 providers like Okta.
