--- a/docs/pages/management/dynamic-resources/teleport-operator.mdx
+++ b/docs/pages/management/dynamic-resources/teleport-operator.mdx
@@ -49,5 +49,4 @@ follow [the standalone operator guide](./teleport-operator-standalone.mdx).
 ## Next steps
 
 - Follow the ["Managing users and roles with IaC" guide](./user-and-role.mdx).
-
-- Check out [access controls documentation](../../access-controls/introduction.mdx)
+- Check out [access controls documentation](../../access-controls/introduction.mdx).
